Inserindo mudanças no Sass

--- a/public/carrinho.html
+++ b/public/carrinho.html
@@ -55,9 +55,9 @@
                         Tamanho escolhido
                     </h3>
                     <div class="minha__sacola__imagem__botao">
-                        <input type="radio" name="P" class="minha__sacola__botao__tamanho">P</input>
-                        <input type="radio" name="M" class="minha__sacola__botao__tamanho">M</input>
-                        <input type="radio" name="G" class="minha__sacola__botao__tamanho">G</input>
+                        <input class="minha__sacola__botao__tamanho" type="radio" name="tamanho" value="P">P</input>
+                        <input class="minha__sacola__botao__tamanho" type="radio" name="tamanho" value="M">M</input>
+                        <input class="minha__sacola__botao__tamanho" type="radio" name="tamanho" value="G">G</input>
                     </div>
                 </div>
                 <div class="minha__sacola__valor__produto">
@@ -98,9 +98,12 @@
                         Tamanho escolhido
                     </h3>
                     <div class="minha__sacola__imagem__botao">
-                        <input type="radio" name="P" class="minha__sacola__botao__tamanho">P</input>
-                        <input type="radio" name="M" class="minha__sacola__botao__tamanho">M</input>
-                        <input type="radio" name="G" class="minha__sacola__botao__tamanho">G</input>
+                        <input class="minha__sacola__botao__tamanho" type="radio" name="tamanho" value="P">
+                        <label>P</label>
+                        <input class="minha__sacola__botao__tamanho" type="radio" name="tamanho" value="M">
+                        <label>P</label>
+                        <input class="minha__sacola__botao__tamanho" type="radio" name="tamanho" value="G">
+                        <label>P</label>
                     </div>
                 </div>
                 <div class="minha__sacola__valor__produto">
