--- a/public/index.html
+++ b/public/index.html
@@ -339,6 +339,7 @@
         </section>
         </section>
     </footer>
+    <script src="./js/index.js"></script>
     <script src="./js/estoque.js"></script>
 </body>
 </html>
