Inserindo ts da semana 5

--- a/public/carrinho.html
+++ b/public/carrinho.html
@@ -5,9 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../src/sass/carrinho.css">
-    <script src="./js/total-carrinho.js"> </script>
-    <script src="./js/total-carrinho-taxado.js"> </script>
-    <script src="./js/carrinho-total-descontos.js"> </script>
     <title>Reviva Fashion Carrinho</title>
 </head>
 <body>
@@ -159,7 +156,7 @@
                         <p class="minha__sacola__total__conteudo">R$ 119,80</p>
                     </div>
                 <div class="minha__sacola__botao__total">
-                    <button class="minha__sacola__botao__total__pagamento" onclick="total_da_Compra()">Ir para pagamento</button>               
+                    <button class="minha__sacola__botao__total__pagamento" >Ir para pagamento</button>               
                 </div>
                 </div>
         </section>
@@ -217,5 +214,7 @@
         </section>
         </section>
     </footer>
+    <script type="module" src="./js/app/carrinho.js"></script>
 </body>
 </html>
+<!--onclick="total_da_Compra()"-->
