--- a/public/index.html
+++ b/public/index.html
@@ -139,8 +139,8 @@
         </section>
     </footer>
     <script type="module" src="./js/app/index.js"></script>
-   <!-- <script type="module" src="./js/app/carrinho.js"></script>
+    <script type="module" src="./js/app/carrinho.js"></script>
     <script type="module" src="./js/app/estoque.js"></script>
-    <script type="module" src="./js/app/views/list-launchView.js"></script>-->
+    <!--<script type="module" src="./js/app/views/list-launchView.js"></script>-->
 </body>
 </html>
